--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,31 @@
 name: django-plpy
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 jobs:
-  test:
+  build:
+
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6]
+    services:
+      postgres:
+        image: postgres
+
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-    - uses: lpenz/ghaction-pytest-cov@v1
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements_test.txt
+    - name: Run Tests
+      run: |
+        pytest .
