--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
     services:
       postgres:
         image: postgres
-
+        env:
+          POSTGRES_PASSWORD: postgres
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -27,5 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements_test.txt
     - name: Run Tests
+      env:
+        DATABASE_URL: postgres://postgres:postgres@postgres/postgres
       run: |
         pytest .
