--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: [3.6]
     services:
       postgres:
-        image: postgres:10.18
+        image: thorinschiffer/postgres-plpython:10
         env:
           POSTGRES_PASSWORD: postgres
         ports:
