--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,8 +1,10 @@
 name: Postgres PL/Python
 
 on:
-  release:
-    types: [published]
+#  release:
+#    types: [published]
+  push:
+    branches: [main]
 
 jobs:
   push_to_registry:
