--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,10 +1,8 @@
 name: Postgres PL/Python
 
 on:
-#  release:
-#    types: [published]
-  push:
-    branches: [main]
+  release:
+    types: [published]
 
 jobs:
   push_to_registry:
