--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,6 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  workflow_dispatch:
-    inputs:
-      debug_enabled:
-        description: Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)
-        required: false
-        default: false
 
 jobs:
   build:
@@ -27,7 +21,7 @@ jobs:
         - 5432:5432
         volumes:
         - ${{github.workspace}}:/app
-        - /usr/lib/python3/dist-packages:/env
+        - /opt/hostedtoolcache/Python/3.7.11/x64/lib:/env
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -49,4 +43,3 @@ jobs:
     # Enable tmate debugging of manually-triggered workflows if the input option was provided
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
-      if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
