--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         - 5432:5432
         volumes:
         - ${{github.workspace}}:/app
-        - ${{env.LD_LIBRARY_PATH}}/python${{ matrix.python-version }}/site-packages/:/env
+        - ${LD_LIBRARY_PATH}/python${{ matrix.python-version }}/site-packages/:/env
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
