Fixing defaults for env and project paths

--- a/.env_template
+++ b/.env_template
@@ -1,2 +1,6 @@
 DATABASE_URL=postgres://db_triggers:db_triggers@localhost/db_triggers
 SECRET_KEY=1234657
+
+# this is only needed if database is on a different host
+#PLPY_ENV_PATHS=/env,
+#PLPY_PROJECT_PATH=/app
