--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.6, 3.7]
         postgres-version: [10, 11, 12, 13]
         include:
         - python-version: 3.7
           python-long-version: 3.7.11
+        - python-version: 3.6
+          python-long-version: 3.6.14
     services:
       postgres:
         image: thorinschiffer/postgres-plpython:${{ matrix.postgres-version }}
