--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,13 @@ on:
 
 jobs:
   build:
-
+    name: Test Python ${{ matrix.python-version }}, Django ${{ matrix.django-version }}, Postgres ${{matrix.postgres-version}}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
         postgres-version: [10, 11, 12, 13]
+        django-version: [Django==2.2, Django>=3.2, <4.0]
         include:
         - python-version: 3.6
           python-long-version: 3.6.14
@@ -43,6 +44,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements_test.txt
+        pip install -U ${{matrix.django-version}}
     - name: Run Tests
       env:
         DATABASE_URL: postgres://postgres:postgres@localhost/postgres
