--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements_test.txt
-        pip install -U ${{matrix.django-version}}
+        pip install -U "${{matrix.django-version}}"
     - name: Run Tests
       env:
         DATABASE_URL: postgres://postgres:postgres@localhost/postgres
