--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,3 +29,10 @@ repos:
   hooks:
   - id: black
     language_version: python3.6
+- repo: https://github.com/PyCQA/pydocstyle
+  rev: 6.1.1
+  hooks:
+  - id: pydocstyle
+    files: ^src/
+    args:
+    - --ignore=D104, D100, D2, D4
