--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
   hooks:
   - id: pyupgrade
     args: [--py36-plus]
-- repo: git@github.com:macisamuele/language-formatters-pre-commit-hooks
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
   rev: v2.1.0
   hooks:
   - id: pretty-format-yaml
