--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,20 +6,9 @@ on:
     branches: [main]
 
 jobs:
-  build:
-    name: Linting
+  pre-commit:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements_lint.txt
-    - name: Run pre-commit
-      run: |
-        pre-commit run --all-files
+    - uses: actions/setup-python@v2
+    - uses: pre-commit/action@v2.0.3
