--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,8 @@ repos:
   rev: v2.0.0    # Use the ref you want to point at
   hooks:
   - id: flake8
-    additional_dependencies: [flake8-tidy-imports, flake8-mutable]
+    entry: pflake8
+    additional_dependencies: [flake8-tidy-imports, flake8-mutable, pyproject-flake8]
     args: [--count, --show-source]
   - id: trailing-whitespace
   - id: end-of-file-fixer
